--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,26 @@ body {
     overflow: auto;
 }
 
+#preloader {
+    background: #000 url("/images/loader.gif") no-repeat center center;
+    background-size: 100%;
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    z-index: 1000;
+}
+
+.disappear {
+    animation: vanish 1s forwards;
+}
+
+@keyframes vanish {
+    100%{
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 h2 {
     color: #ffffff;
     font-size: 25px;
@@ -278,6 +298,29 @@ hr {
 }
 
 @media ( min-width: 950px) {
+    #preloader {
+        background: #000 url("/images/loader.gif") no-repeat center center;
+        background-size: 50%;
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        z-index: 1000;
+    }
+
+    .disappear {
+        animation: vanish 1s forwards;
+    }
+
+    @keyframes vanish {
+        100%{
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
+
+    #home {
+        margin-top: 100px;
+    }
     
     .home-image {
         width: 50vw;
